--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from typing import List, Set\n",
+    "from typing import Set\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "RAW_DATA_PATH = \"CogLoad-1Hz\"\n",
-    "CLEAN_DATA_PATH = \"cleaned_data\"\n",
+    "RAW_DATA_DIR = \"CogLoad-1Hz\"\n",
+    "CLEAN_DATA_DIR = \"clean_data\"\n",
     "\n",
     "NOT_EXPERIMENT = {\"quest\", \"post\"}\n",
     "\n",
@@ -32,12 +32,21 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Get tasks"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def get_tasks(files_path: str) -> Set[str]:\n",
-    "    tasks = set()\n",
+    "    tasks: Set[str] = set()\n",
     "\n",
     "    for file in os.listdir(files_path):\n",
     "        if \"sensors\" not in file:\n",
@@ -55,7 +64,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Get tasks"
+    "Segment observations"
    ],
    "metadata": {
     "collapsed": false
@@ -63,104 +72,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "def get_segments(files_path: str) -> [np.ndarray, np.ndarray, np.ndarray, np.ndarray, np.ndarray, np.ndarray]:\n",
-    "    tasks: Set[str] = get_tasks(files_path=files_path)\n",
+    "def segment(path: str, tasks: Set[str]) -> [pd.DataFrame, pd.DataFrame]:\n",
+    "    if \"sensors\" not in path:\n",
+    "        raise Exception(\"File doesn’t contain sensor data\")\n",
     "\n",
-    "    _label_segments = []\n",
-    "    _temp_segments = []\n",
-    "    _hr_segments = []\n",
-    "    _gsr_segments = []\n",
-    "    _rr_segments = []\n",
+    "    df: pd.DataFrame = pd.read_csv(path)\n",
+    "    df = df.replace([np.inf, -np.inf], np.nan)\n",
+    "    df = df.dropna()\n",
+    "\n",
+    "    label_segments = []\n",
+    "    temp_segments = []\n",
+    "    hr_segments = []\n",
+    "    gsr_segments = []\n",
+    "    rr_segments = []\n",
     "    segment_sensor_data: pd.DataFrame = pd.DataFrame()\n",
-    "    for file in os.listdir(files_path):\n",
-    "        if \"sensor\" not in file:\n",
-    "            continue\n",
     "\n",
-    "        df = pd.read_csv(f\"{files_path}/{file}\")\n",
-    "        df = df.replace([np.inf, -np.inf], np.nan)\n",
-    "        df = df.dropna()\n",
+    "    for task in tasks:\n",
+    "        for level in df[df.task == task].level.unique():\n",
+    "            task_df = df[(df.task == task) & (df.level == level)]\n",
+    "            if len(task_df) == 0:\n",
+    "                continue\n",
     "\n",
-    "        for task in tasks:\n",
-    "            for level in df[df.task == task].level.unique():\n",
-    "                task_df = df[(df.task == task) & (df.level == level)]\n",
-    "                if len(task_df) == 0:\n",
-    "                    continue\n",
+    "            if \"rest\" in task and task not in (\"n2_rest\", \"n3_rest\"):\n",
+    "                timestamp_end_arr = []\n",
+    "                timestamp_end_arr.extend(\n",
+    "                    task_df[task_df.timestamp.diff() > 10000].timestamp.values\n",
+    "                )\n",
+    "                timestamp_end_arr.append(task_df.timestamp.iloc[-1])\n",
     "\n",
-    "                if \"rest\" in task and task not in (\"n2_rest\", \"n3_rest\"):\n",
-    "                    timestamp_end_arr = []\n",
-    "                    timestamp_end_arr.extend(\n",
-    "                        task_df[task_df.timestamp.diff() > 10000].timestamp.values\n",
-    "                    )\n",
-    "                    timestamp_end_arr.append(task_df.timestamp.iloc[-1])\n",
+    "                for segment_end in timestamp_end_arr:\n",
+    "                    segment_sensor_data = task_df[task_df.timestamp < segment_end]\n",
+    "                    segment_sensor_data = segment_sensor_data.iloc[-WINDOW_SIZE:]\n",
     "\n",
-    "                    for segment_end in timestamp_end_arr:\n",
-    "                        segment_sensor_data = task_df[task_df.timestamp < segment_end]\n",
-    "                        segment_sensor_data = segment_sensor_data.iloc[-WINDOW_SIZE:]\n",
-    "\n",
-    "                        if segment_sensor_data.shape[0] != WINDOW_SIZE:\n",
-    "                            continue\n",
-    "\n",
-    "                        _label_segments.append(segment_sensor_data.iloc[-1].values)\n",
-    "\n",
-    "                        _temp_segments.append(\n",
-    "                            segment_sensor_data.temperature.values[:WINDOW_SIZE]\n",
-    "                        )\n",
-    "                        _hr_segments.append(segment_sensor_data.hr.values[:WINDOW_SIZE])\n",
-    "                        _gsr_segments.append(\n",
-    "                            segment_sensor_data.gsr.values[:WINDOW_SIZE]\n",
-    "                        )\n",
-    "                        _rr_segments.append(segment_sensor_data.rr.values[:WINDOW_SIZE])\n",
-    "                else:\n",
-    "                    segment_end = task_df.timestamp.iloc[-1]\n",
-    "                    segment_start = segment_end - WINDOW_SIZE * 1000\n",
-    "                    segment_sensor_data = task_df[\n",
-    "                        (task_df.timestamp <= segment_end)\n",
-    "                        & (task_df.timestamp >= segment_start)\n",
-    "                    ]\n",
-    "                    if 25 < segment_sensor_data.shape[0] < WINDOW_SIZE:\n",
-    "                        segment_sensor_data = df[\n",
-    "                            (df.timestamp <= segment_end)\n",
-    "                            & (df.timestamp >= segment_start)\n",
-    "                        ]\n",
-    "\n",
-    "                    if len(segment_sensor_data) < WINDOW_SIZE:\n",
+    "                    if segment_sensor_data.shape[0] != WINDOW_SIZE:\n",
     "                        continue\n",
     "\n",
-    "                    _label_segments.append(segment_sensor_data.iloc[-1].values)\n",
+    "                    label_segments.append(segment_sensor_data.iloc[-1].values)\n",
     "\n",
-    "                    _temp_segments.append(\n",
+    "                    temp_segments.append(\n",
     "                        segment_sensor_data.temperature.values[:WINDOW_SIZE]\n",
     "                    )\n",
-    "                    _hr_segments.append(segment_sensor_data.hr.values[:WINDOW_SIZE])\n",
-    "                    _gsr_segments.append(segment_sensor_data.gsr.values[:WINDOW_SIZE])\n",
-    "                    _rr_segments.append(segment_sensor_data.rr.values[:WINDOW_SIZE])\n",
+    "                    hr_segments.append(segment_sensor_data.hr.values[:WINDOW_SIZE])\n",
+    "                    gsr_segments.append(segment_sensor_data.gsr.values[:WINDOW_SIZE])\n",
+    "                    rr_segments.append(segment_sensor_data.rr.values[:WINDOW_SIZE])\n",
+    "            else:\n",
+    "                segment_end = task_df.timestamp.iloc[-1]\n",
+    "                segment_start = segment_end - WINDOW_SIZE * 1000\n",
+    "                segment_sensor_data = task_df[\n",
+    "                    (task_df.timestamp <= segment_end)\n",
+    "                    & (task_df.timestamp >= segment_start)\n",
+    "                ]\n",
+    "                if 25 < segment_sensor_data.shape[0] < WINDOW_SIZE:\n",
+    "                    segment_sensor_data = df[\n",
+    "                        (df.timestamp <= segment_end) & (df.timestamp >= segment_start)\n",
+    "                    ]\n",
     "\n",
-    "    _label_segments = np.stack(_label_segments)\n",
-    "    _temp_segments = np.stack(_temp_segments)\n",
-    "    _hr_segments = np.stack(_hr_segments)\n",
-    "    _gsr_segments = np.stack(_gsr_segments)\n",
-    "    _rr_segments = np.stack(_rr_segments)\n",
-    "    _column_names = segment_sensor_data.columns.values\n",
+    "                if len(segment_sensor_data) < WINDOW_SIZE:\n",
+    "                    continue\n",
     "\n",
-    "    print(\n",
-    "        type(_label_segments),\n",
-    "        type(_temp_segments),\n",
-    "        type(_hr_segments),\n",
-    "        type(_gsr_segments),\n",
-    "        type(_rr_segments),\n",
-    "        type(_column_names),\n",
+    "                label_segments.append(segment_sensor_data.iloc[-1].values)\n",
+    "\n",
+    "                temp_segments.append(\n",
+    "                    segment_sensor_data.temperature.values[:WINDOW_SIZE]\n",
+    "                )\n",
+    "                hr_segments.append(segment_sensor_data.hr.values[:WINDOW_SIZE])\n",
+    "                gsr_segments.append(segment_sensor_data.gsr.values[:WINDOW_SIZE])\n",
+    "                rr_segments.append(segment_sensor_data.rr.values[:WINDOW_SIZE])\n",
+    "\n",
+    "    label_segments = np.stack(label_segments)\n",
+    "    column_names = segment_sensor_data.columns.values\n",
+    "\n",
+    "    temp_segments = np.stack(temp_segments)\n",
+    "    hr_segments = np.stack(hr_segments)\n",
+    "    gsr_segments = np.stack(gsr_segments)\n",
+    "    rr_segments = np.stack(rr_segments)\n",
+    "\n",
+    "    _features: pd.DataFrame = pd.DataFrame(\n",
+    "        np.concatenate([temp_segments, hr_segments, gsr_segments, rr_segments], axis=1)\n",
     "    )\n",
-    "    return (\n",
-    "        _label_segments,\n",
-    "        _temp_segments,\n",
-    "        _hr_segments,\n",
-    "        _gsr_segments,\n",
-    "        _rr_segments,\n",
-    "        _column_names,\n",
-    "    )"
+    "    _labels: pd.DataFrame = pd.DataFrame(label_segments, columns=column_names)\n",
+    "\n",
+    "    return _features, _labels"
    ],
    "metadata": {
     "collapsed": false
@@ -168,70 +163,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'> <class 'numpy.ndarray'> <class 'numpy.ndarray'> <class 'numpy.ndarray'> <class 'numpy.ndarray'> <class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "(\n",
-    "    label_segments,\n",
-    "    temp_segments,\n",
-    "    hr_segments,\n",
-    "    gsr_segments,\n",
-    "    rr_segments,\n",
-    "    column_names,\n",
-    ") = get_segments(files_path=RAW_DATA_PATH)\n",
-    "\n",
-    "label_df = pd.DataFrame(label_segments, columns=column_names)\n",
-    "\n",
-    "temp_df = pd.DataFrame(temp_segments)\n",
-    "hr_df = pd.DataFrame(hr_segments)\n",
-    "gsr_df = pd.DataFrame(gsr_segments)\n",
-    "rr_df = pd.DataFrame(rr_segments)\n",
-    "\n",
-    "label_df.to_csv(f\"{CLEAN_DATA_PATH}/segment_labels.csv\")\n",
-    "temp_df.to_csv(f\"{CLEAN_DATA_PATH}/segment_temperature.csv\")\n",
-    "hr_df.to_csv(f\"{CLEAN_DATA_PATH}/segment_heartrate.csv\")\n",
-    "gsr_df.to_csv(f\"{CLEAN_DATA_PATH}/segment_gsr.csv\")\n",
-    "rr_df.to_csv(f\"{CLEAN_DATA_PATH}/segment_rr.csv\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "def csv_equal(comparee_path: str, standard_path: str) -> bool:\n",
-    "    if standard_path == comparee_path:\n",
+    "def clean_data(raw_data_dir: str, save_dir: str):\n",
+    "    tasks: Set[str] = get_tasks(files_path=RAW_DATA_DIR)\n",
+    "\n",
+    "    for file_name in sorted(os.listdir(raw_data_dir)):\n",
+    "        features, labels = segment(path=f\"{RAW_DATA_DIR}/{file_name}\", tasks=tasks)\n",
+    "\n",
+    "        user_id: str = file_name.split(\"_\")[0]\n",
+    "        features.to_csv(f\"{save_dir}/{user_id}_features.csv\")\n",
+    "        labels.to_csv(f\"{save_dir}/{user_id}_labels.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "def data_equal(comparee_dir: str, standard_dir: str) -> bool:\n",
+    "    # Check if the directory is compared with itself\n",
+    "    if comparee_dir == standard_dir:\n",
     "        return True\n",
     "\n",
-    "    comparee_df: pd.DataFrame = pd.read_csv(comparee_path)\n",
-    "    standard_df: pd.DataFrame = pd.read_csv(standard_path)\n",
+    "    # Check if both sources have data of the same shape\n",
+    "    comparee_features: pd.DataFrame = pd.concat(\n",
+    "        [\n",
+    "            pd.read_csv(f\"{comparee_dir}/{file_name}\")\n",
+    "            for file_name in os.listdir(comparee_dir)\n",
+    "            if \"features\" in file_name\n",
+    "        ]\n",
+    "    )\n",
+    "    standard_features: pd.DataFrame = pd.concat(\n",
+    "        [\n",
+    "            pd.read_csv(f\"{standard_dir}/segment_{data_type}.csv\")\n",
+    "            for data_type in [\"temperature\", \"heartrate\", \"gsr\", \"rr\"]\n",
+    "        ],\n",
+    "        axis=1,\n",
+    "    )\n",
     "\n",
-    "    if len(comparee_df) != len(standard_df):\n",
+    "    comparee_features = comparee_features.drop(\"Unnamed: 0\", axis=1)\n",
+    "    standard_features = standard_features.drop(\"Unnamed: 0\", axis=1)\n",
+    "\n",
+    "    comparee_labels: pd.DataFrame = pd.concat(\n",
+    "        [\n",
+    "            pd.read_csv(f\"{comparee_dir}/{file_name}\")\n",
+    "            for file_name in os.listdir(comparee_dir)\n",
+    "            if \"labels\" in file_name\n",
+    "        ]\n",
+    "    )\n",
+    "    standard_labels: pd.DataFrame = pd.read_csv(f\"{standard_dir}/segment_labels.csv\")\n",
+    "\n",
+    "    comparee_labels = comparee_labels.drop(\"Unnamed: 0\", axis=1)\n",
+    "    standard_labels = standard_labels.drop(\"Unnamed: 0\", axis=1)\n",
+    "\n",
+    "    if (\n",
+    "        comparee_features.shape != standard_features.shape\n",
+    "        or comparee_labels.shape != standard_labels.shape\n",
+    "    ):\n",
     "        return False\n",
     "\n",
-    "    merged_df: pd.DataFrame = pd.merge(\n",
-    "        comparee_df.drop(\"Unnamed: 0\", axis=1),\n",
-    "        standard_df.drop(\"Unnamed: 0\", axis=1),\n",
+    "    # Check if both sources contain the same rows\n",
+    "    comparee_features.columns = range(comparee_features.shape[1])\n",
+    "    standard_features.columns = range(standard_features.shape[1])\n",
+    "\n",
+    "    merged_features: pd.DataFrame = pd.merge(\n",
+    "        comparee_features,\n",
+    "        standard_features,\n",
     "        how=\"outer\",\n",
     "        left_index=False,\n",
     "        right_index=False,\n",
     "        indicator=True,\n",
     "    )\n",
-    "    sources: pd.Index = (\n",
-    "        merged_df[\"_merge\"].unique().remove_unused_categories().categories\n",
+    "    merged_labels: pd.DataFrame = pd.merge(\n",
+    "        comparee_labels,\n",
+    "        standard_labels,\n",
+    "        how=\"outer\",\n",
+    "        left_index=False,\n",
+    "        right_index=False,\n",
+    "        indicator=True,\n",
     "    )\n",
-    "    if len(sources) > 1 or \"both\" not in sources:\n",
+    "\n",
+    "    sources_features: pd.Index = (\n",
+    "        merged_features[\"_merge\"].unique().remove_unused_categories().categories\n",
+    "    )\n",
+    "    sources_labels: pd.Index = (\n",
+    "        merged_labels[\"_merge\"].unique().remove_unused_categories().categories\n",
+    "    )\n",
+    "\n",
+    "    if len(sources_features) > 1 or \"both\" not in sources_features:\n",
+    "        return False\n",
+    "    if len(sources_labels) > 1 or \"both\" not in sources_labels:\n",
     "        return False\n",
     "\n",
     "    return True"
@@ -242,48 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "outputs": [],
-   "source": [
-    "def csvs_equal(comparee_csv_dir: str, standard_csv_dir: str) -> bool:\n",
-    "    comparee_files: List[str] = os.listdir(comparee_csv_dir)\n",
-    "    standard_files: List[str] = os.listdir(standard_csv_dir)\n",
-    "\n",
-    "    comparee_files.sort()\n",
-    "    standard_files.sort()\n",
-    "\n",
-    "    if comparee_files != standard_files:\n",
-    "        return False\n",
-    "\n",
-    "    for comparee_file, standard_file in zip(comparee_files, standard_files):\n",
-    "        files_equal: bool = csv_equal(\n",
-    "            comparee_path=f\"{comparee_csv_dir}/{comparee_file}\",\n",
-    "            standard_path=f\"{standard_csv_dir}/{standard_file}\",\n",
-    "        )\n",
-    "        if not files_equal:\n",
-    "            return False\n",
-    "\n",
-    "    return True"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 136,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csvs_equal(\"cleaned_data\", \"initial_data\")"
+    "clean_data(raw_data_dir=RAW_DATA_DIR, save_dir=CLEAN_DATA_DIR)\n",
+    "data_equal(comparee_dir=CLEAN_DATA_DIR, standard_dir=\"initial_data\")"
    ],
    "metadata": {
     "collapsed": false
