--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,22 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from typing import Set\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "outputs": [],
    "source": [
     "RAW_DATA_DIR = \"CogLoad-1Hz\"\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "def get_tasks(files_path: str) -> Set[str]:\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "outputs": [],
    "source": [
     "def segment(path: str, tasks: Set[str]) -> [pd.DataFrame, pd.DataFrame]:\n",
@@ -110,7 +111,13 @@
     "                    if segment_sensor_data.shape[0] != WINDOW_SIZE:\n",
     "                        continue\n",
     "\n",
-    "                    label_segments.append(segment_sensor_data.iloc[-1].values)\n",
+    "                    label_segment: np.ndarray = segment_sensor_data.iloc[-1].values\n",
+    "                    if any(\n",
+    "                        np.array_equal(label_segment, ls_i) for ls_i in label_segments\n",
+    "                    ):\n",
+    "                        continue\n",
+    "\n",
+    "                    label_segments.append(label_segment)\n",
     "\n",
     "                    temp_segments.append(\n",
     "                        segment_sensor_data.temperature.values[:WINDOW_SIZE]\n",
@@ -133,7 +140,11 @@
     "                if len(segment_sensor_data) < WINDOW_SIZE:\n",
     "                    continue\n",
     "\n",
-    "                label_segments.append(segment_sensor_data.iloc[-1].values)\n",
+    "                label_segment: np.ndarray = segment_sensor_data.iloc[-1].values\n",
+    "                if any(np.array_equal(label_segment, ls_i) for ls_i in label_segments):\n",
+    "                    continue\n",
+    "\n",
+    "                label_segments.append(label_segment)\n",
     "\n",
     "                temp_segments.append(\n",
     "                    segment_sensor_data.temperature.values[:WINDOW_SIZE]\n",
@@ -150,12 +161,12 @@
     "    gsr_segments = np.stack(gsr_segments)\n",
     "    rr_segments = np.stack(rr_segments)\n",
     "\n",
-    "    _features: pd.DataFrame = pd.DataFrame(\n",
+    "    _segments: pd.DataFrame = pd.DataFrame(\n",
     "        np.concatenate([temp_segments, hr_segments, gsr_segments, rr_segments], axis=1)\n",
     "    )\n",
     "    _labels: pd.DataFrame = pd.DataFrame(label_segments, columns=column_names)\n",
     "\n",
-    "    return _features, _labels"
+    "    return _segments, _labels"
    ],
    "metadata": {
     "collapsed": false
@@ -163,17 +174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "outputs": [],
    "source": [
     "def clean_data(raw_data_dir: str, save_dir: str):\n",
     "    tasks: Set[str] = get_tasks(files_path=RAW_DATA_DIR)\n",
     "\n",
     "    for file_name in sorted(os.listdir(raw_data_dir)):\n",
-    "        features, labels = segment(path=f\"{RAW_DATA_DIR}/{file_name}\", tasks=tasks)\n",
+    "        segments, labels = segment(path=f\"{RAW_DATA_DIR}/{file_name}\", tasks=tasks)\n",
     "\n",
     "        user_id: str = file_name.split(\"_\")[0]\n",
-    "        features.to_csv(f\"{save_dir}/{user_id}_features.csv\")\n",
+    "        segments.to_csv(f\"{save_dir}/{user_id}_segments.csv\")\n",
     "        labels.to_csv(f\"{save_dir}/{user_id}_labels.csv\")"
    ],
    "metadata": {
@@ -182,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "outputs": [],
    "source": [
     "def data_equal(comparee_dir: str, standard_dir: str) -> bool:\n",
@@ -191,14 +202,14 @@
     "        return True\n",
     "\n",
     "    # Check if both sources have data of the same shape\n",
-    "    comparee_features: pd.DataFrame = pd.concat(\n",
+    "    comparee_segments: pd.DataFrame = pd.concat(\n",
     "        [\n",
     "            pd.read_csv(f\"{comparee_dir}/{file_name}\")\n",
     "            for file_name in os.listdir(comparee_dir)\n",
-    "            if \"features\" in file_name\n",
+    "            if \"segments\" in file_name\n",
     "        ]\n",
     "    )\n",
-    "    standard_features: pd.DataFrame = pd.concat(\n",
+    "    standard_segments: pd.DataFrame = pd.concat(\n",
     "        [\n",
     "            pd.read_csv(f\"{standard_dir}/segment_{data_type}.csv\")\n",
     "            for data_type in [\"temperature\", \"heartrate\", \"gsr\", \"rr\"]\n",
@@ -206,8 +217,8 @@
     "        axis=1,\n",
     "    )\n",
     "\n",
-    "    comparee_features = comparee_features.drop(\"Unnamed: 0\", axis=1)\n",
-    "    standard_features = standard_features.drop(\"Unnamed: 0\", axis=1)\n",
+    "    comparee_segments = comparee_segments.drop(\"Unnamed: 0\", axis=1)\n",
+    "    standard_segments = standard_segments.drop(\"Unnamed: 0\", axis=1)\n",
     "\n",
     "    comparee_labels: pd.DataFrame = pd.concat(\n",
     "        [\n",
@@ -222,18 +233,20 @@
     "    standard_labels = standard_labels.drop(\"Unnamed: 0\", axis=1)\n",
     "\n",
     "    if (\n",
-    "        comparee_features.shape != standard_features.shape\n",
+    "        comparee_segments.shape != standard_segments.shape\n",
     "        or comparee_labels.shape != standard_labels.shape\n",
     "    ):\n",
-    "        return False\n",
+    "        print(comparee_segments.shape, standard_segments.shape)\n",
+    "        print(comparee_labels.shape, standard_labels.shape)\n",
+    "        # return False\n",
     "\n",
     "    # Check if both sources contain the same rows\n",
-    "    comparee_features.columns = range(comparee_features.shape[1])\n",
-    "    standard_features.columns = range(standard_features.shape[1])\n",
+    "    comparee_segments.columns = range(comparee_segments.shape[1])\n",
+    "    standard_segments.columns = range(standard_segments.shape[1])\n",
     "\n",
-    "    merged_features: pd.DataFrame = pd.merge(\n",
-    "        comparee_features,\n",
-    "        standard_features,\n",
+    "    merged_segments: pd.DataFrame = pd.merge(\n",
+    "        comparee_segments,\n",
+    "        standard_segments,\n",
     "        how=\"outer\",\n",
     "        left_index=False,\n",
     "        right_index=False,\n",
@@ -248,14 +261,14 @@
     "        indicator=True,\n",
     "    )\n",
     "\n",
-    "    sources_features: pd.Index = (\n",
-    "        merged_features[\"_merge\"].unique().remove_unused_categories().categories\n",
+    "    sources_segments: pd.Index = (\n",
+    "        merged_segments[\"_merge\"].unique().remove_unused_categories().categories\n",
     "    )\n",
     "    sources_labels: pd.Index = (\n",
     "        merged_labels[\"_merge\"].unique().remove_unused_categories().categories\n",
     "    )\n",
     "\n",
-    "    if len(sources_features) > 1 or \"both\" not in sources_features:\n",
+    "    if len(sources_segments) > 1 or \"both\" not in sources_segments:\n",
     "        return False\n",
     "    if len(sources_labels) > 1 or \"both\" not in sources_labels:\n",
     "        return False\n",
@@ -268,13 +281,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(837, 120) (838, 120)\n",
+      "(837, 21) (838, 21)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 7,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
