Support both datasets

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "RAW_DATA_DIR = \"CogLoad-1Hz\"\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "def get_tasks(files_path: str) -> Set[str]:\n",
@@ -52,7 +52,6 @@
     "    for file in os.listdir(files_path):\n",
     "        if \"sensors\" not in file:\n",
     "            continue\n",
-    "\n",
     "        df = pd.read_csv(f\"{files_path}/{file}\")\n",
     "        tasks |= set(df[\"task\"].unique().flatten())\n",
     "\n",
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "def segment(path: str, tasks: Set[str]) -> [pd.DataFrame, pd.DataFrame]:\n",
@@ -93,6 +92,9 @@
     "\n",
     "    for task in tasks:\n",
     "        for level in df[df.task == task].level.unique():\n",
+    "            if level == 1 and \"Snake\" in path:\n",
+    "                continue\n",
+    "\n",
     "            task_df = df[(df.task == task) & (df.level == level)]\n",
     "            if len(task_df) == 0:\n",
     "                continue\n",
@@ -174,18 +176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "def clean_data(raw_data_dir: str, save_dir: str):\n",
-    "    tasks: Set[str] = get_tasks(files_path=RAW_DATA_DIR)\n",
+    "    tasks: Set[str] = get_tasks(files_path=raw_data_dir)\n",
     "\n",
     "    for file_name in sorted(os.listdir(raw_data_dir)):\n",
-    "        segments, labels = segment(path=f\"{RAW_DATA_DIR}/{file_name}\", tasks=tasks)\n",
+    "        if not file_name.endswith(\".csv\"):\n",
+    "            continue\n",
     "\n",
-    "        user_id: str = file_name.split(\"_\")[0]\n",
-    "        segments.to_csv(f\"{save_dir}/{user_id}_segments.csv\")\n",
-    "        labels.to_csv(f\"{save_dir}/{user_id}_labels.csv\")"
+    "        segments, labels = segment(path=f\"{raw_data_dir}/{file_name}\", tasks=tasks)\n",
+    "\n",
+    "        session_id: str = file_name.split(\"_\")[0]\n",
+    "        segments.to_csv(f\"{save_dir}/{session_id}_segments.csv\")\n",
+    "        labels.to_csv(f\"{save_dir}/{session_id}_labels.csv\")"
    ],
    "metadata": {
     "collapsed": false
@@ -193,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "def data_equal(comparee_dir: str, standard_dir: str) -> bool:\n",
@@ -281,29 +286,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(837, 120) (838, 120)\n",
-      "(837, 21) (838, 21)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 32,
+   "outputs": [],
    "source": [
-    "clean_data(raw_data_dir=RAW_DATA_DIR, save_dir=CLEAN_DATA_DIR)\n",
-    "data_equal(comparee_dir=CLEAN_DATA_DIR, standard_dir=\"initial_data\")"
+    "clean_data(raw_data_dir=\"raw_data/CogLoad\", save_dir=\"clean_data/CogLoad\")\n",
+    "# data_equal(comparee_dir=CLEAN_DATA_DIR, standard_dir=\"initial_data\")"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [],
+   "source": [
+    "clean_data(raw_data_dir=\"raw_data/Snake\", save_dir=\"clean_data/Snake\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
