--- a/feature_extraction.ipynb
+++ b/feature_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "warnings.simplefilter(\"ignore\")"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "CLEAN_DATA_DIR = \"clean_data\"\n",
@@ -47,7 +47,7 @@
     "GSR = 2\n",
     "RR = 3\n",
     "\n",
-    "L_DOMAIN = 30"
+    "L_DOMAIN = 30  # length of feature domain"
    ],
    "metadata": {
     "collapsed": false
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def extract_stat_features(segments: pd.DataFrame, domain: str) -> pd.DataFrame:\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "def split_domains(\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "def extract_eda_features(df: pd.DataFrame) -> pd.DataFrame:\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def extract_hrv_features(df: pd.DataFrame) -> pd.DataFrame:\n",
@@ -267,11 +267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "def select_hrv_features(file_paths: List[str]) -> List[pd.DataFrame]:\n",
-    "    rr_segments_per_user: pd.DataFrame = pd.concat(\n",
+    "    rr_segments_per_session: pd.DataFrame = pd.concat(\n",
     "        [\n",
     "            pd.read_csv(file_path)\n",
     "            .drop(\"Unnamed: 0\", axis=1)\n",
@@ -284,17 +284,19 @@
     "\n",
     "    lengths: List[int] = [len(pd.read_csv(file_path)) for file_path in file_paths]\n",
     "\n",
-    "    hrv_features_per_user: pd.DataFrame = extract_hrv_features(rr_segments_per_user)\n",
-    "    hrv_features_per_user.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
-    "    good_features = hrv_features_per_user.isnull().sum() == 0\n",
-    "    hrv_features_per_user = hrv_features_per_user[\n",
-    "        hrv_features_per_user.columns[good_features]\n",
+    "    hrv_features_per_session: pd.DataFrame = extract_hrv_features(\n",
+    "        rr_segments_per_session\n",
+    "    )\n",
+    "    hrv_features_per_session.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "    good_features = hrv_features_per_session.isnull().sum() == 0\n",
+    "    hrv_features_per_session = hrv_features_per_session[\n",
+    "        hrv_features_per_session.columns[good_features]\n",
     "    ]\n",
     "\n",
     "    hrv_features: List[pd.DataFrame] = []\n",
     "    i = 0\n",
     "    for l in lengths:\n",
-    "        hrv_features.append(hrv_features_per_user.iloc[i : i + l, :].reset_index())\n",
+    "        hrv_features.append(hrv_features_per_session.iloc[i : i + l, :].reset_index())\n",
     "        i += l\n",
     "\n",
     "    return hrv_features"
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "def extract_features(source_data_dir: str) -> List[pd.DataFrame]:\n",
@@ -320,12 +322,12 @@
     "        f\"{source_data_dir}/{file_name}\" for file_name in file_names\n",
     "    ]\n",
     "\n",
-    "    hrv_features_per_user: List[pd.DataFrame] = select_hrv_features(\n",
+    "    hrv_features_per_session: List[pd.DataFrame] = select_hrv_features(\n",
     "        file_paths=file_paths\n",
     "    )\n",
     "\n",
-    "    all_features_per_user: List[pd.DataFrame] = []\n",
-    "    for file_path, hrv_features in zip(file_paths, hrv_features_per_user):\n",
+    "    all_features_per_session: List[pd.DataFrame] = []\n",
+    "    for file_path, hrv_features in zip(file_paths, hrv_features_per_session):\n",
     "        segments: pd.DataFrame = pd.read_csv(file_path).drop(\"Unnamed: 0\", axis=1)\n",
     "        domain_segments: List[pd.DataFrame] = split_domains(segments=segments)\n",
     "        domain_segments_rms: List[pd.DataFrame] = [\n",
@@ -343,9 +345,9 @@
     "        all_features: pd.DataFrame = pd.concat(\n",
     "            [stat_features, gsr_features, hrv_features], axis=1\n",
     "        ).drop(\"index\", axis=1)\n",
-    "        all_features_per_user.append(all_features)\n",
+    "        all_features_per_session.append(all_features)\n",
     "\n",
-    "    return all_features_per_user"
+    "    return all_features_per_session"
    ],
    "metadata": {
     "collapsed": false
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "def scale(raw_features: pd.DataFrame) -> pd.DataFrame:\n",
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "def standardize(raw_features: pd.DataFrame) -> pd.DataFrame:\n",
@@ -381,20 +383,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "def merge_features(\n",
-    "    features_per_user: List[pd.DataFrame],\n",
+    "    features_per_session: List[pd.DataFrame],\n",
     ") -> [pd.DataFrame, pd.DataFrame, pd.DataFrame]:\n",
     "    raw_features: pd.DataFrame = pd.concat(\n",
-    "        [raw_f for raw_f in features_per_user], ignore_index=True\n",
+    "        [raw_f for raw_f in features_per_session], ignore_index=True\n",
     "    )\n",
     "    scaled_features: pd.DataFrame = pd.concat(\n",
-    "        [scale(raw_features=raw_f) for raw_f in features_per_user], ignore_index=True\n",
+    "        [scale(raw_features=raw_f) for raw_f in features_per_session], ignore_index=True\n",
     "    )\n",
     "    standardized_features: pd.DataFrame = pd.concat(\n",
-    "        [standardize(raw_features=raw_f) for raw_f in features_per_user],\n",
+    "        [standardize(raw_features=raw_f) for raw_f in features_per_session],\n",
     "        ignore_index=True,\n",
     "    )\n",
     "\n",
@@ -417,24 +419,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 16,
    "outputs": [],
    "source": [
-    "raw_features_per_user: List[pd.DataFrame] = extract_features(\n",
-    "    source_data_dir=CLEAN_DATA_DIR\n",
-    ")\n",
+    "def feature_extraction(clean_data_dir: str, save_dir: str):\n",
+    "    raw_features_per_session: List[pd.DataFrame] = extract_features(\n",
+    "        source_data_dir=clean_data_dir\n",
+    "    )\n",
     "\n",
-    "feature_dfs: [pd.DataFrame, pd.DataFrame, pd.DataFrame] = merge_features(\n",
-    "    features_per_user=raw_features_per_user\n",
-    ")\n",
+    "    feature_dfs: [pd.DataFrame, pd.DataFrame, pd.DataFrame] = merge_features(\n",
+    "        features_per_session=raw_features_per_session\n",
+    "    )\n",
     "\n",
-    "save_names: [str, str, str] = (\"features_raw\", \"features_0-1\", \"features_std\")\n",
+    "    save_names: [str, str, str] = (\"features_raw\", \"features_0-1\", \"features_std\")\n",
     "\n",
-    "for feature_df, save_name in zip(feature_dfs, save_names):\n",
-    "    feature_df.to_csv(f\"{FINAL_DATA_DIR}/{save_name}.csv\")\n",
+    "    for feature_df, save_name in zip(feature_dfs, save_names):\n",
+    "        feature_df.to_csv(f\"{save_dir}/{save_name}.csv\")\n",
     "\n",
-    "label_df: pd.DataFrame = merge_labels(source_data_dir=CLEAN_DATA_DIR)\n",
-    "label_df.to_csv(f\"{FINAL_DATA_DIR}/labels.csv\")"
+    "    label_df: pd.DataFrame = merge_labels(source_data_dir=clean_data_dir)\n",
+    "    label_df.to_csv(f\"{save_dir}/labels.csv\")"
    ],
    "metadata": {
     "collapsed": false
@@ -442,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "def data_equal(comparee_dir: str, standard_dir: str) -> bool:\n",
@@ -512,27 +515,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(837, 127) (838, 127)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 18,
+   "outputs": [],
    "source": [
-    "data_equal(comparee_dir=FINAL_DATA_DIR, standard_dir=\"end_data\")"
+    "feature_extraction(clean_data_dir=\"clean_data/CogLoad\", save_dir=\"final_data/CogLoad\")"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "feature_extraction(clean_data_dir=\"clean_data/Snake\", save_dir=\"final_data/Snake\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "# data_equal(comparee_dir=FINAL_DATA_DIR, standard_dir=\"end_data\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
