Add DL train data and models

--- a/feature_extraction.ipynb
+++ b/feature_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "outputs": [],
    "source": [
     "warnings.simplefilter(\"ignore\")"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "outputs": [],
    "source": [
     "CLEAN_DATA_DIR = \"clean_data\"\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "outputs": [],
    "source": [
     "def extract_stat_features(segments: pd.DataFrame, domain: str) -> pd.DataFrame:\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "def split_domains(\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "outputs": [],
    "source": [
     "def extract_eda_features(df: pd.DataFrame) -> pd.DataFrame:\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "def extract_hrv_features(df: pd.DataFrame) -> pd.DataFrame:\n",
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "outputs": [],
    "source": [
     "def select_hrv_features(file_paths: List[str]) -> List[pd.DataFrame]:\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "outputs": [],
    "source": [
     "def extract_features(source_data_dir: str) -> List[pd.DataFrame]:\n",
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "outputs": [],
    "source": [
     "def scale(raw_features: pd.DataFrame) -> pd.DataFrame:\n",
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "outputs": [],
    "source": [
     "def standardize(raw_features: pd.DataFrame) -> pd.DataFrame:\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "outputs": [],
    "source": [
     "def merge_features(\n",
@@ -419,21 +419,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "outputs": [],
    "source": [
-    "def feature_extraction(clean_data_dir: str, save_dir: str):\n",
+    "def merge_segments(source_data_dir: str) -> [pd.DataFrame]:\n",
+    "    file_names: List[str] = sorted(\n",
+    "        [\n",
+    "            file_name\n",
+    "            for file_name in os.listdir(source_data_dir)\n",
+    "            if \"segments\" in file_name\n",
+    "        ]\n",
+    "    )\n",
+    "    file_paths: List[str] = [\n",
+    "        f\"{source_data_dir}/{file_name}\" for file_name in file_names\n",
+    "    ]\n",
+    "\n",
+    "    return (\n",
+    "        pd.concat(\n",
+    "            (\n",
+    "                pd.read_csv(file_path).drop(\"Unnamed: 0\", axis=1)\n",
+    "                for file_path in file_paths\n",
+    "            ),\n",
+    "            axis=0,\n",
+    "        ),\n",
+    "    )"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [],
+   "source": [
+    "def process_data(clean_data_dir: str, save_dir: str):\n",
     "    raw_features_per_session: List[pd.DataFrame] = extract_features(\n",
     "        source_data_dir=clean_data_dir\n",
     "    )\n",
+    "\n",
+    "    merged_segments: [pd.DataFrame] = merge_segments(source_data_dir=clean_data_dir)\n",
     "\n",
     "    feature_dfs: [pd.DataFrame, pd.DataFrame, pd.DataFrame] = merge_features(\n",
     "        features_per_session=raw_features_per_session\n",
     "    )\n",
     "\n",
-    "    save_names: [str, str, str] = (\"features_raw\", \"features_0-1\", \"features_std\")\n",
+    "    save_names: [str, str, str, str] = (\n",
+    "        \"features_raw\",\n",
+    "        \"features_0-1\",\n",
+    "        \"features_std\",\n",
+    "        \"segments\",\n",
+    "    )\n",
     "\n",
-    "    for feature_df, save_name in zip(feature_dfs, save_names):\n",
+    "    for feature_df, save_name in zip(feature_dfs + merged_segments, save_names):\n",
     "        feature_df.to_csv(f\"{save_dir}/{save_name}.csv\")\n",
     "\n",
     "    label_df: pd.DataFrame = merge_labels(source_data_dir=clean_data_dir)\n",
@@ -445,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "def data_equal(comparee_dir: str, standard_dir: str) -> bool:\n",
@@ -515,10 +553,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "outputs": [],
    "source": [
-    "feature_extraction(clean_data_dir=\"clean_data/CogLoad\", save_dir=\"final_data/CogLoad\")"
+    "process_data(clean_data_dir=\"clean_data/CogLoad\", save_dir=\"final_data/CogLoad\")"
    ],
    "metadata": {
     "collapsed": false
@@ -526,10 +564,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "outputs": [],
    "source": [
-    "feature_extraction(clean_data_dir=\"clean_data/Snake\", save_dir=\"final_data/Snake\")"
+    "process_data(clean_data_dir=\"clean_data/Snake\", save_dir=\"final_data/Snake\")"
    ],
    "metadata": {
     "collapsed": false
@@ -537,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "# data_equal(comparee_dir=FINAL_DATA_DIR, standard_dir=\"end_data\")"
@@ -548,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "outputs": [],
    "source": [],
    "metadata": {
